Update JigsawPlugin.java